src/app/main/components/contact/contact.component.scss
:host {
  .contact-container {
    position: fixed;
    top: 4rem;
    left: 14%;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 22rem;
    height: 33rem;

    &.s-device {
      left: 20%;
      width: 28rem;
      height: 50rem;
    }

    &.sm-device {
      left: 30%;
      width: 30rem;
      height: 55rem;
    }
    &.m-device {
      left: 35%;
      width: 40rem;
    }

    &.l-device {
      top: 9rem;
      width: 45rem;
      height: 65rem;
    }

    & > * {
      margin: 1rem 0;
    }

    .outro-container {
      display: flex;
      flex-direction: column;
      width: 100%;

      h2 {
        margin: 0.25rem 0;
        font-size: 2rem;
        font-family: "DancingScript-Variable";
        color: rgb(117, 11, 11);
        font-weight: 400;
        padding: 0;
      }
    }

    form {
      display: flex;
      flex-direction: column;
      width: 100%;
      height: 100%;

      input,
      textarea {
        margin-top: 0.5rem;
        border-radius: 4px;
        outline: none;
        padding: 0.5rem 0.75rem;
        font-family: RobotoLight;
        color: rgb(255, 251, 245);
        border: 1px solid #fff;
        box-shadow: 0 0 1px #000;
        background-color: #2222228b;
        font-size: 1.25rem;

        &::placeholder {
          font-style: italic;
          color: #fffbfb6d;
          font-size: 1.25rem;
        }
      }

      textarea {
        resize: none;
        overflow-y: scroll;
        height: 100%;
      }

      button {
        position: relative;
        height: 4rem;
        max-width: 8rem;
        background-color: #000000b0;
        font-size: 1.5rem;
        font-family: Italiana;
        border: none;
        align-self: flex-end;
        cursor: pointer;
        color: #fff;

        &::before {
          content: "";
          position: absolute;
          left: 0;
          top: 0;
          width: 0;
          height: 100%;
          background-color: rgba(255, 0, 0, 0.311);
          transition: width 0.4s ease-out;
        }

        &:hover::before {
          width: 100%;
        }
      }

      .error-msg {
        color: rgb(232, 94, 44);
        font-size: 1rem;
        font-family: RobotoExtraLight;
        margin-top: -0.25rem;
      }
    }
  }
}

